stderr
JudgeMan.java:11: error: incompatible types: void cannot be converted to int[]
        int[] sortedIntArray = Arrays.sort(intArray);
                                          ^
1 error
